# aura-core-ai-test

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  Makefile  README.md  TECHNICAL_REPORT.md  docker-compose.yml  inicializar_sistema.py  integration_test_results.json  main.py  prometheus.yml  pyproject.toml  requirements.txt  train_ner.spacy
app/: config.py  documents.db  exceptions.py  main.py  models.py  schemas.py  tasks.py
app/api/: documents.py  routes.py  search.py
app/api/endpoints/: documents.py  search.py  system.py
app/controllers/: document_controller.py
app/core/: vector_store.py
app/data/: document_index.faiss  metadata.json
app/db/: database.py
app/docs/: README.md
app/docs/diagrams/: aura.excalidraw.md  process_document.puml
app/domain/: services.py
app/files/: extractor_docx.py  extractor_json.py  extractor_pdf.py  storage.py
app/ingestion/: document_loader.py  pipeline.py  text_splitter.py
app/ml/: classifier.py  embeddings.py  ner.py
app/models/: classifier.py  classifier_model.pkl  document_store.py  embeddings.py  entities.py  extract_text.py  ner.py  ner_model.py  orm.py  repository.py  schemas.py  statuses.py
app/models/ner_model/: model.py
app/models/ner_model/model-best/: meta.json
app/models/ner_model/model-best/vocab/: strings.json
app/models/ner_model/model-last/: config.cfg
app/models/ner_model/model-last/ner/: model  moves
app/repositories/: sqlite_repository.py
app/retrieval/: rag.py  searcher.py
app/routers/: documents.py
app/services/: classifier.py  classify.py  document_service.py  embedder.py  embeddings.py  extract.py  extractor.py  index.py  ner.py  search.py
app/storage/: db.py  minio_client.py
data/batch_1/: interview_transcripts.json  product_backlog.json  session_notes.csv
data/batch_2/: interview_transcripts.json  product_backlog.json  session_notes.csv
data/demo_docs/: contrato_servicios.json  correspondencia_comercial.txt  documento_legal.json  manual_usuario.txt  reporte_tecnico_ia.json
data/samples/: DataPrueba.json
data/test_files/: sample.json  sample.txt
data/uploads/: 8d6f6478-cb2a-4b1c-9d18-6e6e0f3249d3_business_email_sample.txt  f8f79b54-eecf-49c4-be3d-ad1ae90e37b2_technical_report_sample (1).txt
docs/: 001_ML.md  002_API.md  003_TESTS.md  SETUP_GUIDE.md  TECHNICAL_DECISIONS.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
output/: artifact_store.jsonl  intelligence_report_batch_2.json  intelligence_report_cumulative_up_to_batch_1.json  intelligence_report_cumulative_up_to_batch_2.json  pipeline_state.json  taxonomy_mapping_batch_1.jsonl  taxonomy_mapping_batch_2.jsonl
src/: ingestor.py  models.py  processor.py  utils.py
src/ai_models/: ai_pipeline.py  base.py  classification_model.py  embedding_model.py  ner_model.py  semantic_search.py  vector_search.py
src/api/: dependencies.py  endpoints.py  main.py  models.py
src/core/: config.py  exceptions.py  logging.py  logging_config.py  models.py
src/document_processor/: base.py  docx_extractor.py  json_extractor.py  novel_approaches.py  pdf_extractor.py  processor.py  processor_registry.py  txt_extractor.py
src/utils/: ab_testing.py  advanced_caching.py  file_utils.py  file_validator.py  monitoring.py  performance_monitor.py  performance_optimization.py
src/web/: __init__.py  routes.py
src/web/static/css/: main.css
src/web/static/js/: main.js
test/: test_basic.py
tests/: conftest.py  test_embeddings.py  test_extract.py  test_search.py
tests/controllers/: test_controller.py
tests/repositories/: test_repositories.py
tests/services/: test_service.py
